<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/frameLayoutCuenta"
        android:layout_width="match_parent"


        android:layout_height="match_parent"></FrameLayout>

    <LinearLayout
        android:id="@+id/layoutTextoCuenta"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"



        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/txt_reg_nueva"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/txt_reg_cuenta"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"


        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTextoCuenta">

        <ImageView


            android:layout_width="280dp"
            android:layout_height="4dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="#335080"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTextoCuenta"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/txt_nombre_cuenta"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="40dp"
            android:paddingLeft="40dp"/>
        <EditText
            android:id="@+id/edt_nombre_cuenta"
            android:layout_width="match_parent"
            android:layout_height="39dp"

            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:inputType="text"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/txt_numero_cuenta"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="40dp"/>
        <EditText
            android:id="@+id/edt_numero_cuenta"
            android:layout_width="match_parent"
            android:layout_height="39dp"
          android:inputType="number"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/txt_entidad"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="40dp"/>
        <Spinner
            android:id="@+id/spn_entidad_combo"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:spinnerMode="dialog"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="2dp"
            />
        <ImageView


            android:layout_width="290dp"
            android:layout_height="4dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="#335080"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancelar_cuenta"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="65dp"
                android:text="@string/txt_btn_cancelar"
                />
            <Button
                android:id="@+id/btn_registrar_cuenta"
                android:layout_width="110dp"
                android:layout_height="50dp"

                android:layout_marginLeft="30dp"
                android:text="@string/txt_btn_registra"
                android:layout_gravity="bottom"/>


        </LinearLayout>




    </LinearLayout>


</android.support.constraint.ConstraintLayout>