<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/frameLayoutServivio"
        android:layout_width="match_parent"


        android:layout_height="match_parent"></FrameLayout>
    
   <LinearLayout
       android:id="@+id/layoutTextoRegistrar"
       android:layout_width="match_parent"
       android:layout_height="140dp"
       android:orientation="vertical"


       
       >
       
       <TextView
           android:layout_width="match_parent"
           android:layout_height="30dp"
           android:text="@string/txt_reg_nuevo"
           android:textAlignment="center"
           android:layout_marginTop="50dp"
           android:textStyle="bold"
           android:textSize="20sp"
           />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="30dp"
           android:text="@string/txt_reg_ser"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:layout_marginTop="10dp"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"


        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTextoRegistrar">

        <ImageView


            android:layout_width="280dp"
            android:layout_height="4dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="#335080"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTextoRegistrar"
        android:layout_marginTop="20dp"
        android:orientation="vertical"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/txt_nombre_servicio"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="40dp"/>
        <EditText
            android:id="@+id/edt_nombre_servicio"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_marginTop="5dp"
            android:layout_marginRight="55dp"
            android:layout_marginLeft="40dp"
            android:inputType="text"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/txt_numero_ref"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="40dp"/>
        <EditText
            android:id="@+id/edt_numero_ref"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="55dp"
            android:inputType="number"

            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancelar_servicio"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="65dp"
                android:text="@string/txt_btn_cancelar"
                />
            <Button
                android:id="@+id/btn_registrar_servicio"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="30dp"
                android:text="@string/txt_btn_registra"/>


        </LinearLayout>








    </LinearLayout>

</android.support.constraint.ConstraintLayout>